--- a/htdocs/css/dsfr/dsfr.css
+++ b/htdocs/css/dsfr/dsfr.css
@@ -4,3 +4,19 @@ html, body {
   background: #fff;
   padding-top: 0px;
 }
+
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  height: unset;
+}
+
+.wrap {
+  padding: 0;
+  margin: 0;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
