--- a/htdocs/css/dsfr/dsfr.css
+++ b/htdocs/css/dsfr/dsfr.css
@@ -1,16 +1,16 @@
 /* CSS override for DSFR */
 
 html, body {
-  background: #fff;
-  padding-top: 0px;
+  background: none;
+  padding-top: 0;
 }
-
 
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   height: unset;
+
 }
 
 .wrap {
